[128] removed toggle for the new server manager!
added toggle for visad.java3d.geometryByRef (aka "the spurious line fix") defaults to true.

added bandaid toggle for the PermGen OOM bug.